--- a/client_side/src/Components/Packs/Packs.scss
+++ b/client_side/src/Components/Packs/Packs.scss
@@ -131,6 +131,10 @@
                         flex-direction: column;
                         text-align: center;
 
+                        .text-container {
+                            height: 400px;
+                        }
+
                         h3:nth-child(1) {
                             border-bottom: 2px solid #fff;
                             padding: 20px 0;
