--- a/client_side/src/Components/Contact/Contact.scss
+++ b/client_side/src/Components/Contact/Contact.scss
@@ -30,7 +30,7 @@
         .carousel-swiper {
             .swiper-container {
                 background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
-                    url(./Images_public/Contact/waiter-uniform-holding-metal-tray_23-2148245001-vcXFzZpHH-transformed.jpeg);
+                    url(../../../public/Images_public/Contact/waiter-uniform-holding-metal-tray_23-2148245001-vcXFzZpHH-transformed.jpeg);
                 background-size: cover;
                 background-clip: border-box;
                 background-position: center;
@@ -40,12 +40,12 @@
 
             .swiper-container:nth-child(2) {
                 background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
-                    url(./Images_public/Carousel/Image1Slide.jpg);
+                    url(../../../public/Images_public/Carousel/Image1Slide.jpg);
             }
 
             .swiper-container:nth-child(2) {
                 background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
-                    url(./Images_public/Carousel/Image1Slide.jpg);
+                    url(../../../public/Images_public/Carousel/Image1Slide.jpg);
             }
         }
 
