--- a/client_side/src/Components/Packs/Packs.scss
+++ b/client_side/src/Components/Packs/Packs.scss
@@ -115,7 +115,6 @@
                         min-height: 300px;
                         max-height: auto;
                         width: 80%;
-                        width: 80%;
                     }
 
                     img {
@@ -132,7 +131,7 @@
                         text-align: center;
 
                         .text-container {
-                            height: 400px;
+                            min-height: 500px;
                         }
 
                         h3:nth-child(1) {
