--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -714,7 +714,7 @@
         }
 
         a {
-            padding: 10px;
+            padding: 2px 28px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -728,6 +728,7 @@
             margin-top: 20px;
             transition: all 0.3s ease;
             z-index: 5;
+            border-radius: 75px;
             @media screen and (max-width: 900px) {
                 font-size: 30px;
             }
