--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -100,7 +100,7 @@
                 justify-content: center;
                 align-items: center;
                 text-decoration: none;
-                padding: 10px;
+                padding: 0px 25px;
                 border: none;
                 font-family: Dand;
                 font-size: 40px;
