--- a/client_side/src/Components/Packs/Packs.scss
+++ b/client_side/src/Components/Packs/Packs.scss
@@ -132,7 +132,7 @@
 
                         h3:nth-child(1) {
                             border-bottom: 2px solid #fff;
-                            padding: 20px 0;
+                            padding: 20px 50px;
                             margin-bottom: 30px;
                             font-size: 50px;
                         }
