--- a/client_side/src/Components/Navbar/Navbar.scss
+++ b/client_side/src/Components/Navbar/Navbar.scss
@@ -49,6 +49,7 @@
                     height: 45px;
 
                     a {
+                        position: relative;
                         color: #000;
                         transition: all 0.3s ease;
                         text-decoration: none;
@@ -63,6 +64,23 @@
                             -moz-transform: scale(0.98);
                             -ms-transform: scale(0.98);
                             -o-transform: scale(0.98);
+                        }
+
+
+                        .cycle-notice {
+                            width: 15px;
+                            height: 15px;
+                            border-radius: 50%;
+                            background-color: #6c4177;
+                            border: 1px solid #fff;
+                            position: absolute;
+                            right: -10px;
+                            top: 0;
+                            color: #fff;
+                            font-size: 10px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
                         }
                     }
                 }
