Pre Render for new custom css

--- a/client_side/src/Components/Footer/Footer.scss
+++ b/client_side/src/Components/Footer/Footer.scss
@@ -158,6 +158,9 @@
                 -moz-border-radius: 50%;
                 -ms-border-radius: 50%;
                 -o-border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
         }
     }
