--- a/client_side/src/Components/Reservation/Reservation.scss
+++ b/client_side/src/Components/Reservation/Reservation.scss
@@ -181,6 +181,17 @@
             justify-content: center;
 
             .products-table {
+
+                .total-price {
+                    color: #000;
+                    text-align: center;
+                    font-size: 32px;
+                    span {
+                        color: #6c4177;
+                        font-size: 36px;
+                    }
+                }
+
                 .rwd-table {
                     margin: 1em 0;
                     min-width: 300px; // adjust to your needs
