--- a/client_side/src/Components/Services/Services.scss
+++ b/client_side/src/Components/Services/Services.scss
@@ -348,55 +348,102 @@
     }
 
     .active-m {
-        display: block !important;
+        display: flex !important;
     }
 
-    #modalServices {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
-        padding-top: 100px; /* Location of the box */
+    .modal {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
         left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-        background-color: rgb(0, 0, 0); /* Fallback color */
-        background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+        top: -80px;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
     }
 
-    /* Modal Content */
     .modal-content {
         background-color: #fefefe;
         margin: auto;
         padding: 20px;
         border: 1px solid #888;
-        width: 80%;
+        width: 50%;
+        height: auto;
+        border-radius: 20px;
 
-        .buttons-container {
-            button:nth-child(1) {
-                background-color: #6c4177;
-                color: #fff;
-                border-radius: 10px;
-                padding: 2px 20px;
-                border: none;
-            }
+        p {
+            color: #000;
+            font-size: 28px;
+        }
 
-            button:nth-child(2) {
-                background-color: #fff;
-                color: #6c4177;
-                border-radius: 10px;
-                padding: 2px 20px;
-                border: none;
+        .buttons-con {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 20px;
+            font-family: Contrail;
+            height: 200px;
+
+            .but {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 20px;
+
+                button {
+                    background-color: #6c4177;
+                    color: #fff;
+                    border-radius: 10px;
+                    padding: 2px 20px;
+                    border: none;
+                    height: 40px;
+                    font-family: Contrail;
+                    font-size: 24px;
+                    border: 2px solid #6c4177;
+                    transition: all 0.3s ease;
+                    cursor: pointer;
+
+                    &:hover {
+                        filter: grayscale(70%);
+                        transform: scale(0.96);
+                    }
+                }
+
+                a {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #fff;
+                    color: #6c4177;
+                    border-radius: 10px;
+                    padding: 0px 20px;
+                    height: 40px;
+                    border: none;
+                    text-decoration: none;
+                    border: 2px solid #6c4177;
+                    font-size: 24px;
+
+                    transition: all 0.3s ease;
+
+                    &:hover {
+                        filter: grayscale(70%);
+                        transform: scale(0.96);
+                    }
+                }
             }
         }
     }
 
-    /* The Close Button */
     .close {
-        color: #aaaaaa;
+        color: #dc2828;
         float: right;
-        font-size: 28px;
+        font-size: 40px;
         font-weight: bold;
     }
 
