Done Finishing Website

--- a/client_side/src/Components/Packs/Packs.scss
+++ b/client_side/src/Components/Packs/Packs.scss
@@ -190,13 +190,15 @@
     }
 
     .active-m {
-        display: block !important;
+        display: flex !important;
     }
 
     .modal {
         display: none; /* Hidden by default */
+        justify-content: center;
+        align-items: center;
         position: fixed; /* Stay in place */
-        z-index: 1; /* Sit on top */
+        z-index: 120; /* Sit on top */
         padding-top: 100px; /* Location of the box */
         left: 0;
         top: 0;
@@ -207,6 +209,63 @@
         background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 
         .container-modal-fields {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 25px;
+
+            p {
+                font-size: 28px;
+                color: #00000086;
+                text-align: center;
+            }
+
+            input {
+                width: 40%;
+                height: 35px;
+                padding: 10px;
+                background-color: #fff;
+                border-radius: 10px;
+                border: 2px solid #6c4177;
+                font-family: Contrail;
+                font-size: 28px;
+                outline: none;
+                color: #000;
+            }
+
+            select {
+                width: 100%;
+                height: auto;
+                padding: 10px;
+                background-color: #6c4177;
+                border-radius: 10px;
+                border: 2px solid #6c4177;
+                font-family: Contrail;
+                font-size: 28px;
+                outline: none;
+                color: #fff;
+            }
+
+            a {
+                background-color: #fff;
+                padding: 2px 20px;
+                color: #6c4177;
+                border-radius: 10px;
+                font-size: 30px;
+                text-decoration: none;
+                border: 2px solid #6c4177;
+                width: 18%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .disabled {
+                opacity: 0.5;
+                filter: grayscale(100%);
+                pointer-events: none;
+            }
         }
     }
 
@@ -216,7 +275,10 @@
         margin: auto;
         padding: 20px;
         border: 1px solid #888;
-        width: 80%;
+        width: 50%;
+        border-radius: 20px;
+        top: -20%;
+        position: relative;
     }
 
     /* The Close Button */
