More Enhancments for the css

--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -519,6 +519,10 @@
                             font-style: bold;
                             font-size: 28px;
                         }
+
+                        p {
+                            text-transform: uppercase;
+                        }
                     }
 
                     .right-panel {
