--- a/client_side/src/Components/Footer/Footer.scss
+++ b/client_side/src/Components/Footer/Footer.scss
@@ -100,6 +100,14 @@
                     height: 50px;
                     width: 150px;
                     border: none;
+                    cursor: pointer;
+                    font-family: Contrail;
+                    font-size: 16px;
+                    transition: all .3s ease;
+
+                    &:hover {
+                        transform: translateY(-10px);
+                    }
                 }
 
                 .accept-check {
