--- a/client_side/src/Components/Navbar/Navbar.scss
+++ b/client_side/src/Components/Navbar/Navbar.scss
@@ -74,8 +74,8 @@
                             background-color: #6c4177;
                             border: 1px solid #fff;
                             position: absolute;
-                            right: -10px;
-                            top: 0;
+                            right: -16px;
+                            top: -4px;
                             color: #fff;
                             font-size: 10px;
                             display: flex;
