--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -166,7 +166,7 @@
 
                 @media screen and (max-width: 900px) {
                     font-size: 28px;
-                    padding: 15px 40px;
+                    padding: 0px !important;
                     margin-top: 10px;
                 }
             }
@@ -455,7 +455,7 @@
 
                 @media screen and (max-width: 900px) {
                     font-size: 20px;
-                    padding: 15px 40px;
+                    padding: 0px !important;
                     margin-top: 10px;
                 }
             }
