--- a/client_side/src/Components/Navbar/Navbar.scss
+++ b/client_side/src/Components/Navbar/Navbar.scss
@@ -111,7 +111,7 @@
         aside {
             display: none;
             position: fixed;
-            width: 400px;
+            width: 100%;
             right: 0;
             top: 0;
             height: 100dvh;
