--- a/client_side/src/Components/Services/Services.scss
+++ b/client_side/src/Components/Services/Services.scss
@@ -12,6 +12,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: scroll;
+            text-align: center;
 
             h2 {
                 font-size: 80px;
@@ -174,6 +175,7 @@
                         display: inline-block;
                         margin-bottom: 15px;
                         width: 30%;
+
                         select {
                             background-color: #6c4177;
                             padding: 10px;
@@ -193,6 +195,10 @@
 
                             option {
                                 padding: 20px 20px;
+                            }
+
+                            @media screen and (max-width: 900px) {
+                                display: none;
                             }
                         }
                         .select select::-ms-expand {
@@ -220,6 +226,10 @@
                             padding: 3px;
                             transform: rotate(45deg);
                             -webkit-transform: rotate(45deg);
+
+                            @media screen and (max-width: 900px) {
+                                display: none;
+                            }
                         }
                         .select select:hover ~ .select_arrow,
                         .select select:focus ~ .select_arrow {
