--- a/client_side/src/Components/Gallery/Gallery.scss
+++ b/client_side/src/Components/Gallery/Gallery.scss
@@ -67,27 +67,27 @@
         section {
             .parent {
                 display: grid;
-                grid-template-columns: repeat(4, 1fr);
-                grid-template-rows: repeat(7, 1fr);
-                grid-column-gap: 0px;
-                grid-row-gap: 0px;
-                gap: 10px;
+                grid-template-columns: repeat(8, 1fr);
+                grid-template-rows: repeat(8, 5vw);
+                grid-gap: 15px;
                 margin: 100px 40px;
                 padding: 10px;
                 background-color: #7e53897b;
 
                 div {
                     img {
-                        object-fit: cover;
                         width: 100%;
                         height: 100%;
+                        max-height: 600px;
+                        object-fit: cover;
                     }
                 }
             }
-
+            
             h2 {
                 text-align: center;
                 color: #fff;
+                font-size: 60px;
 
                 spna {
                     color: #6c4177;
@@ -95,79 +95,160 @@
             }
 
             .div1 {
-                grid-area: 1 / 1 / 2 / 2;
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 1;
+                grid-row-end: 3;
             }
             .div2 {
-                grid-area: 1 / 2 / 2 / 3;
+                grid-column-start: 3;
+                grid-column-end: 5;
+                grid-row-start: 1;
+                grid-row-end: 3;
             }
             .div3 {
-                grid-area: 1 / 3 / 2 / 4;
+                grid-column-start: 5;
+                grid-column-end: 9;
+                grid-row-start: 1;
+                grid-row-end: 6;
             }
             .div4 {
-                grid-area: 1 / 4 / 3 / 5;
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 3;
+                grid-row-end: 6;
             }
             .div5 {
-                grid-area: 2 / 1 / 3 / 2;
+                grid-column-start: 3;
+                grid-column-end: 5;
+                grid-row-start: 3;
+                grid-row-end: 6;
             }
             .div6 {
-                grid-area: 2 / 2 / 3 / 3;
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 6;
+                grid-row-end: 9;
             }
             .div7 {
-                grid-area: 2 / 3 / 3 / 4;
+                grid-column-start: 3;
+                grid-column-end: 5;
+                grid-row-start: 6;
+                grid-row-end: 9;
             }
             .div8 {
-                grid-area: 3 / 1 / 5 / 2;
+                grid-column-start: 5;
+                grid-column-end: 7;
+                grid-row-start: 6;
+                grid-row-end: 9;
             }
             .div9 {
-                grid-area: 3 / 2 / 4 / 3;
+                grid-column-start: 7;
+                grid-column-end: 9;
+                grid-row-start: 6;
+                grid-row-end: 9;
             }
             .div10 {
-                grid-area: 3 / 3 / 4 / 4;
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 9;
+                grid-row-end: 12;
             }
             .div11 {
-                grid-area: 3 / 4 / 4 / 5;
+                grid-column-start: 3;
+                grid-column-end: 5;
+                grid-row-start: 9;
+                grid-row-end: 12;
             }
             .div12 {
-                grid-area: 4 / 2 / 5 / 3;
+                grid-column-start: 5;
+                grid-column-end: 9;
+                grid-row-start: 9;
+                grid-row-end: 10;
             }
             .div13 {
-                grid-area: 4 / 3 / 5 / 4;
+                grid-column-start: 3;
+                grid-column-end: 5;
+                grid-row-start: 10;
+                grid-row-end: 14;
+            }
+            .div13l {
+                grid-column-start: 5;
+                grid-column-end: 9;
+                grid-row-start: 10;
+                grid-row-end: 14;
             }
             .div14 {
-                grid-area: 4 / 4 / 5 / 5;
+                grid-column-start: 1;
+                grid-column-end: 5;
+                grid-row-start: 14;
+                grid-row-end: 17;
             }
             .div15 {
-                grid-area: 5 / 1 / 6 / 2;
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 10;
+                grid-row-end: 14;
             }
             .div16 {
-                grid-area: 5 / 2 / 6 / 3;
+                grid-column-start: 5;
+                grid-column-end: 9;
+                grid-row-start: 14;
+                grid-row-end: 17;
             }
             .div17 {
-                grid-area: 5 / 3 / 6 / 4;
+                grid-column-start: 1;
+                grid-column-end: 4;
+                grid-row-start: 17;
+                grid-row-end: 22;
             }
             .div18 {
-                grid-area: 5 / 4 / 7 / 5;
+                grid-column-start: 6;
+                grid-column-end: 9;
+                grid-row-start: 22;
+                grid-row-end: 27;
             }
             .div19 {
-                grid-area: 6 / 1 / 7 / 2;
+                grid-column-start: 4;
+                grid-column-end: 9;
+                grid-row-start: 17;
+                grid-row-end: 22;
             }
             .div20 {
-                grid-area: 6 / 2 / 7 / 3;
+                grid-column-start: 1;
+                grid-column-end: 5;
+                grid-row-start: 27;
+                grid-row-end: 32;
             }
             .div21 {
-                grid-area: 6 / 3 / 7 / 4;
+                grid-column-start: 1;
+                grid-column-end: 6;
+                grid-row-start: 22;
+                grid-row-end: 27;
             }
             .div22 {
-                grid-area: 7 / 1 / 8 / 2;
+                grid-column-start: 5;
+                grid-column-end: 7;
+                grid-row-start: 27;
+                grid-row-end: 32;
             }
             .div23 {
-                grid-area: 7 / 2 / 8 / 3;
+                grid-column-start: 7;
+                grid-column-end: 9;
+                grid-row-start: 27;
+                grid-row-end: 32;
             }
             .div24 {
-                grid-area: 7 / 3 / 8 / 4;
+                grid-column-start: 1;
+                grid-column-end: 5;
+                grid-row-start: 32;
+                grid-row-end: 37;
             }
             .div25 {
-                grid-area: 7 / 4 / 8 / 5;
+                grid-column-start: 5;
+                grid-column-end: 9;
+                grid-row-start: 32;
+                grid-row-end: 37;
             }
         }
     }
