--- a/client_side/src/Components/Gallery/Gallery.scss
+++ b/client_side/src/Components/Gallery/Gallery.scss
@@ -1,4 +1,101 @@
 #gallery {
+    #myImg {
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #myImg:hover {
+        opacity: 0.7;
+    }
+
+    /* The Modal (background) */
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 99; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0, 0, 0); /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+    }
+
+    /* Modal Content (image) */
+    .modal-content {
+        margin: auto;
+        display: block;
+        width: 75%;
+        //max-width: 75%;
+    }
+
+    /* Caption of Modal Image */
+    #caption {
+        margin: auto;
+        display: block;
+        width: 80%;
+        max-width: 700px;
+        text-align: center;
+        color: #ccc;
+        padding: 10px 0;
+        height: 150px;
+    }
+
+    @-webkit-keyframes zoom {
+        from {
+            -webkit-transform: scale(1);
+        }
+        to {
+            -webkit-transform: scale(2);
+        }
+    }
+
+    @keyframes zoom {
+        from {
+            transform: scale(0.4);
+        }
+        to {
+            transform: scale(1);
+        }
+    }
+
+    @-webkit-keyframes zoom-out {
+        from {
+            transform: scale(1);
+        }
+        to {
+            transform: scale(0);
+        }
+    }
+    @keyframes zoom-out {
+        from {
+            transform: scale(1);
+        }
+        to {
+            transform: scale(0);
+        }
+    }
+
+    /* Add Animation */
+    .modal-content,
+    #caption {
+        -webkit-animation-name: zoom;
+        -webkit-animation-duration: 0.6s;
+        animation-name: zoom;
+        animation-duration: 0.6s;
+    }
+
+    .out {
+        animation-name: zoom-out;
+        animation-duration: 0.6s;
+    }
+
     .gallery {
         header {
             width: 100%;
@@ -74,6 +171,11 @@
                 padding: 10px;
                 background-color: #7e53897b;
 
+                @media screen and (max-width: 900px) {
+                    grid-template-columns: repeat(1, 1fr) !important;
+                    grid-template-rows: repeat(1, 5vw) !important;
+                }
+
                 div {
                     img {
                         width: 100%;
@@ -83,13 +185,13 @@
                     }
                 }
             }
-            
+
             h2 {
                 text-align: center;
                 color: #fff;
                 font-size: 60px;
 
-                spna {
+                span {
                     color: #6c4177;
                 }
             }
@@ -99,156 +201,338 @@
                 grid-column-end: 3;
                 grid-row-start: 1;
                 grid-row-end: 3;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 1;
+                    grid-row-end: 3;
+                }
             }
             .div2 {
                 grid-column-start: 3;
                 grid-column-end: 5;
                 grid-row-start: 1;
                 grid-row-end: 3;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 3;
+                    grid-row-end: 6;
+                }
             }
             .div3 {
                 grid-column-start: 5;
                 grid-column-end: 9;
                 grid-row-start: 1;
                 grid-row-end: 6;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 6;
+                    grid-row-end: 9;
+                }
             }
             .div4 {
                 grid-column-start: 1;
                 grid-column-end: 3;
                 grid-row-start: 3;
                 grid-row-end: 6;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 9;
+                    grid-row-end: 12;
+                }
             }
             .div5 {
                 grid-column-start: 3;
                 grid-column-end: 5;
                 grid-row-start: 3;
                 grid-row-end: 6;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 12;
+                    grid-row-end: 15;
+                }
             }
             .div6 {
                 grid-column-start: 1;
                 grid-column-end: 3;
                 grid-row-start: 6;
                 grid-row-end: 9;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 15;
+                    grid-row-end: 18;
+                }
             }
             .div7 {
                 grid-column-start: 3;
                 grid-column-end: 5;
                 grid-row-start: 6;
                 grid-row-end: 9;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 18;
+                    grid-row-end: 21;
+                }
             }
             .div8 {
                 grid-column-start: 5;
                 grid-column-end: 7;
                 grid-row-start: 6;
                 grid-row-end: 9;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 21;
+                    grid-row-end: 24;
+                }
             }
             .div9 {
                 grid-column-start: 7;
                 grid-column-end: 9;
                 grid-row-start: 6;
                 grid-row-end: 9;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 24;
+                    grid-row-end: 27;
+                }
             }
             .div10 {
                 grid-column-start: 1;
                 grid-column-end: 3;
                 grid-row-start: 9;
                 grid-row-end: 12;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 27;
+                    grid-row-end: 30;
+                }
             }
             .div11 {
                 grid-column-start: 3;
                 grid-column-end: 5;
                 grid-row-start: 9;
                 grid-row-end: 12;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 30;
+                    grid-row-end: 33;
+                }
             }
             .div12 {
                 grid-column-start: 5;
                 grid-column-end: 9;
                 grid-row-start: 9;
                 grid-row-end: 10;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 33;
+                    grid-row-end: 36;
+                }
             }
             .div13 {
                 grid-column-start: 3;
                 grid-column-end: 5;
                 grid-row-start: 10;
                 grid-row-end: 14;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 36;
+                    grid-row-end: 39;
+                }
             }
             .div13l {
                 grid-column-start: 5;
                 grid-column-end: 9;
                 grid-row-start: 10;
                 grid-row-end: 14;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 39;
+                    grid-row-end: 42;
+                }
             }
             .div14 {
                 grid-column-start: 1;
                 grid-column-end: 5;
                 grid-row-start: 14;
                 grid-row-end: 17;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 42;
+                    grid-row-end: 45;
+                }
             }
             .div15 {
                 grid-column-start: 1;
                 grid-column-end: 3;
                 grid-row-start: 10;
                 grid-row-end: 14;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 45;
+                    grid-row-end: 48;
+                }
             }
             .div16 {
                 grid-column-start: 5;
                 grid-column-end: 9;
                 grid-row-start: 14;
                 grid-row-end: 17;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 48;
+                    grid-row-end: 51;
+                }
             }
             .div17 {
                 grid-column-start: 1;
                 grid-column-end: 4;
                 grid-row-start: 17;
                 grid-row-end: 22;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 51;
+                    grid-row-end: 54;
+                }
             }
             .div18 {
                 grid-column-start: 6;
                 grid-column-end: 9;
                 grid-row-start: 22;
                 grid-row-end: 27;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 54;
+                    grid-row-end: 57;
+                }
             }
             .div19 {
                 grid-column-start: 4;
                 grid-column-end: 9;
                 grid-row-start: 17;
                 grid-row-end: 22;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 57;
+                    grid-row-end: 60;
+                }
             }
             .div20 {
                 grid-column-start: 1;
                 grid-column-end: 5;
                 grid-row-start: 27;
                 grid-row-end: 32;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 60;
+                    grid-row-end: 63;
+                }
             }
             .div21 {
                 grid-column-start: 1;
                 grid-column-end: 6;
                 grid-row-start: 22;
                 grid-row-end: 27;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 63;
+                    grid-row-end: 66;
+                }
             }
             .div22 {
                 grid-column-start: 5;
                 grid-column-end: 7;
                 grid-row-start: 27;
                 grid-row-end: 32;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 66;
+                    grid-row-end: 69;
+                }
             }
             .div23 {
                 grid-column-start: 7;
                 grid-column-end: 9;
                 grid-row-start: 27;
                 grid-row-end: 32;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 69;
+                    grid-row-end: 72;
+                }
             }
             .div24 {
                 grid-column-start: 1;
                 grid-column-end: 5;
                 grid-row-start: 32;
                 grid-row-end: 37;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 72;
+                    grid-row-end: 75;
+                }
             }
             .div25 {
                 grid-column-start: 5;
                 grid-column-end: 9;
                 grid-row-start: 32;
                 grid-row-end: 37;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 75;
+                    grid-row-end: 78;
+                }
             }
         }
     }
