--- a/client_side/src/Components/Gallery/Gallery.scss
+++ b/client_side/src/Components/Gallery/Gallery.scss
@@ -25,6 +25,17 @@
         overflow: auto; /* Enable scroll if needed */
         background-color: rgb(0, 0, 0); /* Fallback color */
         background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+
+
+        img {
+            height: 80dvh;
+            object-fit: cover;
+            border-radius: 20px;
+        }
+    }
+
+    .active {
+        display: block;
     }
 
     /* Modal Content (image) */
