--- a/client_side/src/Components/Gallery/Gallery.scss
+++ b/client_side/src/Components/Gallery/Gallery.scss
@@ -189,6 +189,14 @@
                 }
 
                 div {
+                    transition: all .3s ease;
+                    filter: grayscale(30%);
+
+                    &:hover {
+                        transform: scale(1.02);
+                        filter: grayscale(0%);
+                    }
+
                     img {
                         width: 100%;
                         height: 100%;
@@ -544,6 +552,48 @@
                     grid-column-end: 3;
                     grid-row-start: 75;
                     grid-row-end: 78;
+                }
+            }
+
+            .div26 {
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 37;
+                grid-row-end: 40;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 78;
+                    grid-row-end: 81;
+                }
+            }
+
+            .div27 {
+                grid-column-start: 3;
+                grid-column-end: 6;
+                grid-row-start: 37;
+                grid-row-end: 40;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 81;
+                    grid-row-end: 84;
+                }
+            }
+
+            .div28 {
+                grid-column-start: 6;
+                grid-column-end: 9;
+                grid-row-start: 37;
+                grid-row-end: 40;
+
+                @media screen and (max-width: 900px) {
+                    grid-column-start: 1;
+                    grid-column-end: 3;
+                    grid-row-start: 84;
+                    grid-row-end: 87;
                 }
             }
         }
